y.output
Terminals unused in grammar

   NOT


State 77 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 primary_expression: ID
    2                   | constant
    3                   | LB expression RB

    4 constant: I_CONST
    5         | F_CONST
    6         | S_CONST
    7         | TR
    8         | FA

    9 postfix_expression: primary_expression
   10                   | postfix_expression LSB expression RSB
   11                   | postfix_expression LB RB
   12                   | postfix_expression LB argument_expression_list RB
   13                   | postfix_expression INC
   14                   | postfix_expression DEC

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list COMMA assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC unary_expression
   19                 | DEC unary_expression
   20                 | unary_operator cast_expression

   21 unary_operator: '&'
   22               | MUL
   23               | ADD
   24               | SUB
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression

   28 multiplicative_expression: cast_expression
   29                          | multiplicative_expression MUL cast_expression
   30                          | multiplicative_expression DIV cast_expression
   31                          | multiplicative_expression MOD cast_expression

   32 additive_expression: multiplicative_expression
   33                    | additive_expression ADD multiplicative_expression
   34                    | additive_expression SUB multiplicative_expression

   35 shift_expression: additive_expression

   36 relational_expression: shift_expression
   37                      | relational_expression LT shift_expression
   38                      | relational_expression MT shift_expression
   39                      | relational_expression LTE shift_expression
   40                      | relational_expression MTE shift_expression

   41 equality_expression: relational_expression
   42                    | equality_expression EQ relational_expression
   43                    | equality_expression NE relational_expression

   44 and_expression: equality_expression
   45               | and_expression '&' equality_expression

   46 exclusive_or_expression: and_expression
   47                        | exclusive_or_expression '^' and_expression

   48 inclusive_or_expression: exclusive_or_expression
   49                        | inclusive_or_expression '|' exclusive_or_expression

   50 logical_and_expression: inclusive_or_expression
   51                       | logical_and_expression AND inclusive_or_expression

   52 logical_or_expression: logical_and_expression
   53                      | logical_or_expression OR logical_and_expression

   54 conditional_expression: logical_or_expression
   55                       | logical_or_expression '?' expression ':' conditional_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 assignment_operator: ASGN
   59                    | MULASGN
   60                    | DIVASGN
   61                    | MODASGN
   62                    | ADDASGN
   63                    | SUBASGN

   64 expression: assignment_expression
   65           | expression COMMA assignment_expression

   66 declaration: declaration_specifiers SEMICOLON
   67            | declaration_specifiers init_declarator_list SEMICOLON

   68 declaration_specifiers: type declaration_specifiers
   69                       | type

   70 type: INT
   71     | FLOAT
   72     | STRING
   73     | BOOL
   74     | VOID

   75 init_declarator_list: init_declarator
   76                     | init_declarator_list COMMA init_declarator

   77 init_declarator: declarator ASGN assignment_expression
   78                | declarator

   79 declarator: ID
   80           | LB declarator RB
   81           | declarator LB parameter_list RB
   82           | declarator LB RB
   83           | declarator LB identifier_list RB

   84 parameter_list: parameter_declaration
   85               | parameter_list COMMA parameter_declaration

   86 parameter_declaration: declaration_specifiers declarator
   87                      | declaration_specifiers

   88 identifier_list: ID
   89                | identifier_list COMMA ID

   90 statement: compound_statement
   91          | expression_statement
   92          | selection_statement
   93          | iteration_statement
   94          | jump_statement
   95          | print_statement
   96          | function_statement

   97 compound_statement: LCB RCB
   98                   | LCB block_item_list RCB

   99 block_item_list: block_item
  100                | block_item_list block_item

  101 block_item: declaration
  102           | statement

  103 expression_statement: SEMICOLON
  104                     | expression SEMICOLON

  105 selection_statement: IF LB expression RB statement ELSE statement
  106                    | IF LB expression RB statement

  107 iteration_statement: WHILE LB expression RB statement
  108                    | FOR LB expression_statement expression_statement RB statement
  109                    | FOR LB expression_statement expression_statement expression RB statement
  110                    | FOR LB declaration expression_statement RB statement
  111                    | FOR LB declaration expression_statement expression RB statement

  112 jump_statement: RET SEMICOLON
  113               | RET expression SEMICOLON

  114 print_statement: PRINT LB primary_expression RB SEMICOLON

  115 function_statement: ID LB expression RB SEMICOLON
  116                   | ID LB RB SEMICOLON

  117 program: external_declaration
  118        | program external_declaration

  119 external_declaration: function_definition
  120                     | declaration

  121 function_definition: declaration_specifiers declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'&' (38) 21 45
':' (58) 55
'?' (63) 55
'^' (94) 47
'|' (124) 49
'~' (126) 25
error (256)
PRINT (258) 114
SEMICOLON (259) 66 67 103 104 112 113 114 115 116
ADD (260) 23 33
SUB (261) 24 34
MUL (262) 22 29
DIV (263) 30
MOD (264) 31
INC (265) 13 18
DEC (266) 14 19
MT (267) 38
LT (268) 37
MTE (269) 40
LTE (270) 39
EQ (271) 42
NE (272) 43
ASGN (273) 58 77
ADDASGN (274) 62
SUBASGN (275) 63
MULASGN (276) 59
DIVASGN (277) 60
MODASGN (278) 61
AND (279) 51
OR (280) 53
NOT (281)
LB (282) 3 11 12 80 81 82 83 105 106 107 108 109 110 111 114 115 116
RB (283) 3 11 12 80 81 82 83 105 106 107 108 109 110 111 114 115 116
LCB (284) 97 98
RCB (285) 97 98
LSB (286) 10
RSB (287) 10
COMMA (288) 16 65 76 85 89
IF (289) 105 106
ELSE (290) 105
FOR (291) 108 109 110 111
WHILE (292) 107
I_CONST (293) 4
F_CONST (294) 5
S_CONST (295) 6
INT (296) 70
FLOAT (297) 71
BOOL (298) 73
STRING (299) 72
VOID (300) 74
TR (301) 7
FA (302) 8
RET (303) 112 113
ID (304) 1 79 88 89 115 116


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
primary_expression (58)
    on left: 1 2 3, on right: 9 114
constant (59)
    on left: 4 5 6 7 8, on right: 2
postfix_expression (60)
    on left: 9 10 11 12 13 14, on right: 10 11 12 13 14 17
argument_expression_list (61)
    on left: 15 16, on right: 12 16
unary_expression (62)
    on left: 17 18 19 20, on right: 18 19 27 57
unary_operator (63)
    on left: 21 22 23 24 25 26, on right: 20
cast_expression (64)
    on left: 27, on right: 20 28 29 30 31
multiplicative_expression (65)
    on left: 28 29 30 31, on right: 29 30 31 32 33 34
additive_expression (66)
    on left: 32 33 34, on right: 33 34 35
shift_expression (67)
    on left: 35, on right: 36 37 38 39 40
relational_expression (68)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
equality_expression (69)
    on left: 41 42 43, on right: 42 43 44 45
and_expression (70)
    on left: 44 45, on right: 45 46 47
exclusive_or_expression (71)
    on left: 46 47, on right: 47 48 49
inclusive_or_expression (72)
    on left: 48 49, on right: 49 50 51
logical_and_expression (73)
    on left: 50 51, on right: 51 52 53
logical_or_expression (74)
    on left: 52 53, on right: 53 54 55
conditional_expression (75)
    on left: 54 55, on right: 55 56
assignment_expression (76)
    on left: 56 57, on right: 15 16 57 64 65 77
assignment_operator (77)
    on left: 58 59 60 61 62 63, on right: 57
expression (78)
    on left: 64 65, on right: 3 10 55 65 104 105 106 107 109 111 113
    115
declaration (79)
    on left: 66 67, on right: 101 110 111 120
declaration_specifiers (80)
    on left: 68 69, on right: 66 67 68 86 87 121
type (81)
    on left: 70 71 72 73 74, on right: 68 69
init_declarator_list (82)
    on left: 75 76, on right: 67 76
init_declarator (83)
    on left: 77 78, on right: 75 76
declarator (84)
    on left: 79 80 81 82 83, on right: 77 78 80 81 82 83 86 121
parameter_list (85)
    on left: 84 85, on right: 81 85
parameter_declaration (86)
    on left: 86 87, on right: 84 85
identifier_list (87)
    on left: 88 89, on right: 83 89
statement (88)
    on left: 90 91 92 93 94 95 96, on right: 102 105 106 107 108 109
    110 111
compound_statement (89)
    on left: 97 98, on right: 90 121
block_item_list (90)
    on left: 99 100, on right: 98 100
block_item (91)
    on left: 101 102, on right: 99 100
expression_statement (92)
    on left: 103 104, on right: 91 108 109 110 111
selection_statement (93)
    on left: 105 106, on right: 92
iteration_statement (94)
    on left: 107 108 109 110 111, on right: 93
jump_statement (95)
    on left: 112 113, on right: 94
print_statement (96)
    on left: 114, on right: 95
function_statement (97)
    on left: 115 116, on right: 96
program (98)
    on left: 117 118, on right: 0 118
external_declaration (99)
    on left: 119 120, on right: 117 118
function_definition (100)
    on left: 121, on right: 119


State 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 5

    declaration             go to state 6
    declaration_specifiers  go to state 7
    type                    go to state 8
    program                 go to state 9
    external_declaration    go to state 10
    function_definition     go to state 11


State 1

   70 type: INT .

    $default  reduce using rule 70 (type)


State 2

   71 type: FLOAT .

    $default  reduce using rule 71 (type)


State 3

   73 type: BOOL .

    $default  reduce using rule 73 (type)


State 4

   72 type: STRING .

    $default  reduce using rule 72 (type)


State 5

   74 type: VOID .

    $default  reduce using rule 74 (type)


State 6

  120 external_declaration: declaration .

    $default  reduce using rule 120 (external_declaration)


State 7

   66 declaration: declaration_specifiers . SEMICOLON
   67            | declaration_specifiers . init_declarator_list SEMICOLON
  121 function_definition: declaration_specifiers . declarator compound_statement

    SEMICOLON  shift, and go to state 12
    LB         shift, and go to state 13
    ID         shift, and go to state 14

    init_declarator_list  go to state 15
    init_declarator       go to state 16
    declarator            go to state 17


State 8

   68 declaration_specifiers: type . declaration_specifiers
   69                       | type .

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 69 (declaration_specifiers)

    declaration_specifiers  go to state 18
    type                    go to state 8


State 9

    0 $accept: program . $end
  118 program: program . external_declaration

    $end    shift, and go to state 19
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 5

    declaration             go to state 6
    declaration_specifiers  go to state 7
    type                    go to state 8
    external_declaration    go to state 20
    function_definition     go to state 11


State 10

  117 program: external_declaration .

    $default  reduce using rule 117 (program)


State 11

  119 external_declaration: function_definition .

    $default  reduce using rule 119 (external_declaration)


State 12

   66 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 66 (declaration)


State 13

   80 declarator: LB . declarator RB

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    declarator  go to state 21


State 14

   79 declarator: ID .

    $default  reduce using rule 79 (declarator)


State 15

   67 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   76 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 22
    COMMA      shift, and go to state 23


State 16

   75 init_declarator_list: init_declarator .

    $default  reduce using rule 75 (init_declarator_list)


State 17

   77 init_declarator: declarator . ASGN assignment_expression
   78                | declarator .
   81 declarator: declarator . LB parameter_list RB
   82           | declarator . LB RB
   83           | declarator . LB identifier_list RB
  121 function_definition: declaration_specifiers declarator . compound_statement

    ASGN  shift, and go to state 24
    LB    shift, and go to state 25
    LCB   shift, and go to state 26

    $default  reduce using rule 78 (init_declarator)

    compound_statement  go to state 27


State 18

   68 declaration_specifiers: type declaration_specifiers .

    $default  reduce using rule 68 (declaration_specifiers)


State 19

    0 $accept: program $end .

    $default  accept


State 20

  118 program: program external_declaration .

    $default  reduce using rule 118 (program)


State 21

   80 declarator: LB declarator . RB
   81           | declarator . LB parameter_list RB
   82           | declarator . LB RB
   83           | declarator . LB identifier_list RB

    LB  shift, and go to state 25
    RB  shift, and go to state 28


State 22

   67 declaration: declaration_specifiers init_declarator_list SEMICOLON .

    $default  reduce using rule 67 (declaration)


State 23

   76 init_declarator_list: init_declarator_list COMMA . init_declarator

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    init_declarator  go to state 29
    declarator       go to state 30


State 24

   77 init_declarator: declarator ASGN . assignment_expression

    ADD      shift, and go to state 31
    SUB      shift, and go to state 32
    MUL      shift, and go to state 33
    INC      shift, and go to state 34
    DEC      shift, and go to state 35
    LB       shift, and go to state 36
    I_CONST  shift, and go to state 37
    F_CONST  shift, and go to state 38
    S_CONST  shift, and go to state 39
    TR       shift, and go to state 40
    FA       shift, and go to state 41
    ID       shift, and go to state 42
    '&'      shift, and go to state 43
    '~'      shift, and go to state 44
    '!'      shift, and go to state 45

    primary_expression         go to state 46
    constant                   go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    cast_expression            go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    conditional_expression     go to state 62
    assignment_expression      go to state 63


State 25

   81 declarator: declarator LB . parameter_list RB
   82           | declarator LB . RB
   83           | declarator LB . identifier_list RB

    RB      shift, and go to state 64
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 5
    ID      shift, and go to state 65

    declaration_specifiers  go to state 66
    type                    go to state 8
    parameter_list          go to state 67
    parameter_declaration   go to state 68
    identifier_list         go to state 69


State 26

   97 compound_statement: LCB . RCB
   98                   | LCB . block_item_list RCB

    PRINT      shift, and go to state 70
    SEMICOLON  shift, and go to state 71
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    MUL        shift, and go to state 33
    INC        shift, and go to state 34
    DEC        shift, and go to state 35
    LB         shift, and go to state 36
    LCB        shift, and go to state 26
    RCB        shift, and go to state 72
    IF         shift, and go to state 73
    FOR        shift, and go to state 74
    WHILE      shift, and go to state 75
    I_CONST    shift, and go to state 37
    F_CONST    shift, and go to state 38
    S_CONST    shift, and go to state 39
    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    STRING     shift, and go to state 4
    VOID       shift, and go to state 5
    TR         shift, and go to state 40
    FA         shift, and go to state 41
    RET        shift, and go to state 76
    ID         shift, and go to state 77
    '&'        shift, and go to state 43
    '~'        shift, and go to state 44
    '!'        shift, and go to state 45

    primary_expression         go to state 46
    constant                   go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    cast_expression            go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    conditional_expression     go to state 62
    assignment_expression      go to state 78
    expression                 go to state 79
    declaration                go to state 80
    declaration_specifiers     go to state 81
    type                       go to state 8
    statement                  go to state 82
    compound_statement         go to state 83
    block_item_list            go to state 84
    block_item                 go to state 85
    expression_statement       go to state 86
    selection_statement        go to state 87
    iteration_statement        go to state 88
    jump_statement             go to state 89
    print_statement            go to state 90
    function_statement         go to state 91


State 27

  121 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 121 (function_definition)


State 28

   80 declarator: LB declarator RB .

    $default  reduce using rule 80 (declarator)


State 29

   76 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 76 (init_declarator_list)


State 30

   77 init_declarator: declarator . ASGN assignment_expression
   78                | declarator .
   81 declarator: declarator . LB parameter_list RB
   82           | declarator . LB RB
   83           | declarator . LB identifier_list RB

    ASGN  shift, and go to state 24
    LB    shift, and go to state 25

    $default  reduce using rule 78 (init_declarator)


State 31

   23 unary_operator: ADD .

    $default  reduce using rule 23 (unary_operator)


State 32

   24 unary_operator: SUB .

    $default  reduce using rule 24 (unary_operator)


State 33

   22 unary_operator: MUL .

    $default  reduce using rule 22 (unary_operator)


State 34

   18 unary_expression: INC . unary_expression

    ADD      shift, and go to state 31
    SUB      shift, and go to state 32
    MUL      shift, and go to state 33
    INC      shift, and go to state 34
    DEC      shift, and go to state 35
    LB       shift, and go to state 36
    I_CONST  shift, and go to state 37
    F_CONST  shift, and go to state 38
    S_CONST  shift, and go to state 39
    TR       shift, and go to state 40
    FA       shift, and go to state 41
    ID       shift, and go to state 42
    '&'      shift, and go to state 43
    '~'      shift, and go to state 44
    '!'      shift, and go to state 45

    primary_expression  go to state 46
    constant            go to state 47
    postfix_expression  go to state 48
    unary_expression    go to state 92
    unary_operator      go to state 50


State 35

   19 unary_expression: DEC . unary_expression

    ADD      shift, and go to state 31
    SUB      shift, and go to state 32
    MUL      shift, and go to state 33
    INC      shift, and go to state 34
    DEC      shift, and go to state 35
    LB       shift, and go to state 36
    I_CONST  shift, and go to state 37
    F_CONST  shift, and go to state 38
    S_CONST  shift, and go to state 39
    TR       shift, and go to state 40
    FA       shift, and go to state 41
    ID       shift, and go to state 42
    '&'      shift, and go to state 43
    '~'      shift, and go to state 44
    '!'      shift, and go to state 45

    primary_expression  go to state 46
    constant            go to state 47
    postfix_expression  go to state 48
    unary_expression    go to state 93
    unary_operator      go to state 50


State 36

    3 primary_expression: LB . expression RB

    ADD      shift, and go to state 31
    SUB      shift, and go to state 32
    MUL      shift, and go to state 33
    INC      shift, and go to state 34
    DEC      shift, and go to state 35
    LB       shift, and go to state 36
    I_CONST  shift, and go to state 37
    F_CONST  shift, and go to state 38
    S_CONST  shift, and go to state 39
    TR       shift, and go to state 40
    FA       shift, and go to state 41
    ID       shift, and go to state 42
    '&'      shift, and go to state 43
    '~'      shift, and go to state 44
    '!'      shift, and go to state 45

    primary_expression         go to state 46
    constant                   go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    cast_expression            go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    conditional_expression     go to state 62
    assignment_expression      go to state 78
    expression                 go to state 94


State 37

    4 constant: I_CONST .

    $default  reduce using rule 4 (constant)


State 38

    5 constant: F_CONST .

    $default  reduce using rule 5 (constant)


State 39

    6 constant: S_CONST .

    $default  reduce using rule 6 (constant)


State 40

    7 constant: TR .

    $default  reduce using rule 7 (constant)


State 41

    8 constant: FA .

    $default  reduce using rule 8 (constant)


State 42

    1 primary_expression: ID .

    $default  reduce using rule 1 (primary_expression)


State 43

   21 unary_operator: '&' .

    $default  reduce using rule 21 (unary_operator)


State 44

   25 unary_operator: '~' .

    $default  reduce using rule 25 (unary_operator)


State 45

   26 unary_operator: '!' .

    $default  reduce using rule 26 (unary_operator)


State 46

    9 postfix_expression: primary_expression .

    $default  reduce using rule 9 (postfix_expression)


State 47

    2 primary_expression: constant .

    $default  reduce using rule 2 (primary_expression)


State 48

   10 postfix_expression: postfix_expression . LSB expression RSB
   11                   | postfix_expression . LB RB
   12                   | postfix_expression . LB argument_expression_list RB
   13                   | postfix_expression . INC
   14                   | postfix_expression . DEC
   17 unary_expression: postfix_expression .

    INC  shift, and go to state 95
    DEC  shift, and go to state 96
    LB   shift, and go to state 97
    LSB  shift, and go to state 98

    $default  reduce using rule 17 (unary_expression)


State 49

   27 cast_expression: unary_expression .
   57 assignment_expression: unary_expression . assignment_operator assignment_expression

    ASGN     shift, and go to state 99
    ADDASGN  shift, and go to state 100
    SUBASGN  shift, and go to state 101
    MULASGN  shift, and go to state 102
    DIVASGN  shift, and go to state 103
    MODASGN  shift, and go to state 104

    $default  reduce using rule 27 (cast_expression)

    assignment_operator  go to state 105


State 50

   20 unary_expression: unary_operator . cast_expression

    ADD      shift, and go to state 31
    SUB      shift, and go to state 32
    MUL      shift, and go to state 33
    INC      shift, and go to state 34
    DEC      shift, and go to state 35
    LB       shift, and go to state 36
    I_CONST  shift, and go to state 37
    F_CONST  shift, and go to state 38
    S_CONST  shift, and go to state 39
    TR       shift, and go to state 40
    FA       shift, and go to state 41
    ID       shift, and go to state 42
    '&'      shift, and go to state 43
    '~'      shift, and go to state 44
    '!'      shift, and go to state 45

    primary_expression  go to state 46
    constant            go to state 47
    postfix_expression  go to state 48
    unary_expression    go to state 106
    unary_operator      go to state 50
    cast_expression     go to state 107


State 51

   28 multiplicative_expression: cast_expression .

    $default  reduce using rule 28 (multiplicative_expression)


State 52

   29 multiplicative_expression: multiplicative_expression . MUL cast_expression
   30                          | multiplicative_expression . DIV cast_expression
   31                          | multiplicative_expression . MOD cast_expression
   32 additive_expression: multiplicative_expression .

    MUL  shift, and go to state 108
    DIV  shift, and go to state 109
    MOD  shift, and go to state 110

    $default  reduce using rule 32 (additive_expression)


State 53

   33 additive_expression: additive_expression . ADD multiplicative_expression
   34                    | additive_expression . SUB multiplicative_expression
   35 shift_expression: additive_expression .

    ADD  shift, and go to state 111
    SUB  shift, and go to state 112

    $default  reduce using rule 35 (shift_expression)


State 54

   36 relational_expression: shift_expression .

    $default  reduce using rule 36 (relational_expression)


State 55

   37 relational_expression: relational_expression . LT shift_expression
   38                      | relational_expression . MT shift_expression
   39                      | relational_expression . LTE shift_expression
   40                      | relational_expression . MTE shift_expression
   41 equality_expression: relational_expression .

    MT   shift, and go to state 113
    LT   shift, and go to state 114
    MTE  shift, and go to state 115
    LTE  shift, and go to state 116

    $default  reduce using rule 41 (equality_expression)


State 56

   42 equality_expression: equality_expression . EQ relational_expression
   43                    | equality_expression . NE relational_expression
   44 and_expression: equality_expression .

    EQ  shift, and go to state 117
    NE  shift, and go to state 118

    $default  reduce using rule 44 (and_expression)


State 57

   45 and_expression: and_expression . '&' equality_expression
   46 exclusive_or_expression: and_expression .

    '&'  shift, and go to state 119

    $default  reduce using rule 46 (exclusive_or_expression)


State 58

   47 exclusive_or_expression: exclusive_or_expression . '^' and_expression
   48 inclusive_or_expression: exclusive_or_expression .

    '^'  shift, and go to state 120

    $default  reduce using rule 48 (inclusive_or_expression)


State 59

   49 inclusive_or_expression: inclusive_or_expression . '|' exclusive_or_expression
   50 logical_and_expression: inclusive_or_expression .

    '|'  shift, and go to state 121

    $default  reduce using rule 50 (logical_and_expression)


State 60

   51 logical_and_expression: logical_and_expression . AND inclusive_or_expression
   52 logical_or_expression: logical_and_expression .

    AND  shift, and go to state 122

    $default  reduce using rule 52 (logical_or_expression)


State 61

   53 logical_or_expression: logical_or_expression . OR logical_and_expression
   54 conditional_expression: logical_or_expression .
   55                       | logical_or_expression . '?' expression ':' conditional_expression

    OR   shift, and go to state 123
    '?'  shift, and go to state 124

    $default  reduce using rule 54 (conditional_expression)


State 62

   56 assignment_expression: conditional_expression .

    $default  reduce using rule 56 (assignment_expression)


State 63

   77 init_declarator: declarator ASGN assignment_expression .

    $default  reduce using rule 77 (init_declarator)


State 64

   82 declarator: declarator LB RB .

    $default  reduce using rule 82 (declarator)


State 65

   88 identifier_list: ID .

    $default  reduce using rule 88 (identifier_list)


State 66

   86 parameter_declaration: declaration_specifiers . declarator
   87                      | declaration_specifiers .

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    $default  reduce using rule 87 (parameter_declaration)

    declarator  go to state 125


State 67

   81 declarator: declarator LB parameter_list . RB
   85 parameter_list: parameter_list . COMMA parameter_declaration

    RB     shift, and go to state 126
    COMMA  shift, and go to state 127


State 68

   84 parameter_list: parameter_declaration .

    $default  reduce using rule 84 (parameter_list)


State 69

   83 declarator: declarator LB identifier_list . RB
   89 identifier_list: identifier_list . COMMA ID

    RB     shift, and go to state 128
    COMMA  shift, and go to state 129


State 70

  114 print_statement: PRINT . LB primary_expression RB SEMICOLON

    LB  shift, and go to state 130


State 71

  103 expression_statement: SEMICOLON .

    $default  reduce using rule 103 (expression_statement)


State 72

   97 compound_statement: LCB RCB .

    $default  reduce using rule 97 (compound_statement)


State 73

  105 selection_statement: IF . LB expression RB statement ELSE statement
  106                    | IF . LB expression RB statement

    LB  shift, and go to state 131


State 74

  108 iteration_statement: FOR . LB expression_statement expression_statement RB statement
  109                    | FOR . LB expression_statement expression_statement expression RB statement
  110                    | FOR . LB declaration expression_statement RB statement
  111                    | FOR . LB declaration expression_statement expression RB statement

    LB  shift, and go to state 132


State 75

  107 iteration_statement: WHILE . LB expression RB statement

    LB  shift, and go to state 133


State 76

  112 jump_statement: RET . SEMICOLON
  113               | RET . expression SEMICOLON

    SEMICOLON  shift, and go to state 134
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    MUL        shift, and go to state 33
    INC        shift, and go to state 34
    DEC        shift, and go to state 35
    LB         shift, and go to state 36
    I_CONST    shift, and go to state 37
    F_CONST    shift, and go to state 38
    S_CONST    shift, and go to state 39
    TR         shift, and go to state 40
    FA         shift, and go to state 41
    ID         shift, and go to state 42
    '&'        shift, and go to state 43
    '~'        shift, and go to state 44
    '!'        shift, and go to state 45

    primary_expression         go to state 46
    constant                   go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    cast_expression            go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    conditional_expression     go to state 62
    assignment_expression      go to state 78
    expression                 go to state 135


State 77

    1 primary_expression: ID .
  115 function_statement: ID . LB expression RB SEMICOLON
  116                   | ID . LB RB SEMICOLON

    LB  shift, and go to state 136

    LB        [reduce using rule 1 (primary_expression)]
    $default  reduce using rule 1 (primary_expression)


State 78

   64 expression: assignment_expression .

    $default  reduce using rule 64 (expression)


State 79

   65 expression: expression . COMMA assignment_expression
  104 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 137
    COMMA      shift, and go to state 138


State 80

  101 block_item: declaration .

    $default  reduce using rule 101 (block_item)


State 81

   66 declaration: declaration_specifiers . SEMICOLON
   67            | declaration_specifiers . init_declarator_list SEMICOLON

    SEMICOLON  shift, and go to state 12
    LB         shift, and go to state 13
    ID         shift, and go to state 14

    init_declarator_list  go to state 15
    init_declarator       go to state 16
    declarator            go to state 30


State 82

  102 block_item: statement .

    $default  reduce using rule 102 (block_item)


State 83

   90 statement: compound_statement .

    $default  reduce using rule 90 (statement)


State 84

   98 compound_statement: LCB block_item_list . RCB
  100 block_item_list: block_item_list . block_item

    PRINT      shift, and go to state 70
    SEMICOLON  shift, and go to state 71
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    MUL        shift, and go to state 33
    INC        shift, and go to state 34
    DEC        shift, and go to state 35
    LB         shift, and go to state 36
    LCB        shift, and go to state 26
    RCB        shift, and go to state 139
    IF         shift, and go to state 73
    FOR        shift, and go to state 74
    WHILE      shift, and go to state 75
    I_CONST    shift, and go to state 37
    F_CONST    shift, and go to state 38
    S_CONST    shift, and go to state 39
    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    STRING     shift, and go to state 4
    VOID       shift, and go to state 5
    TR         shift, and go to state 40
    FA         shift, and go to state 41
    RET        shift, and go to state 76
    ID         shift, and go to state 77
    '&'        shift, and go to state 43
    '~'        shift, and go to state 44
    '!'        shift, and go to state 45

    primary_expression         go to state 46
    constant                   go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    cast_expression            go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    conditional_expression     go to state 62
    assignment_expression      go to state 78
    expression                 go to state 79
    declaration                go to state 80
    declaration_specifiers     go to state 81
    type                       go to state 8
    statement                  go to state 82
    compound_statement         go to state 83
    block_item                 go to state 140
    expression_statement       go to state 86
    selection_statement        go to state 87
    iteration_statement        go to state 88
    jump_statement             go to state 89
    print_statement            go to state 90
    function_statement         go to state 91


State 85

   99 block_item_list: block_item .

    $default  reduce using rule 99 (block_item_list)


State 86

   91 statement: expression_statement .

    $default  reduce using rule 91 (statement)


State 87

   92 statement: selection_statement .

    $default  reduce using rule 92 (statement)


State 88

   93 statement: iteration_statement .

    $default  reduce using rule 93 (statement)


State 89

   94 statement: jump_statement .

    $default  reduce using rule 94 (statement)


State 90

   95 statement: print_statement .

    $default  reduce using rule 95 (statement)


State 91

   96 statement: function_statement .

    $default  reduce using rule 96 (statement)


State 92

   18 unary_expression: INC unary_expression .

    $default  reduce using rule 18 (unary_expression)


State 93

   19 unary_expression: DEC unary_expression .

    $default  reduce using rule 19 (unary_expression)


State 94

    3 primary_expression: LB expression . RB
   65 expression: expression . COMMA assignment_expression

    RB     shift, and go to state 141
    COMMA  shift, and go to state 138


State 95

   13 postfix_expression: postfix_expression INC .

    $default  reduce using rule 13 (postfix_expression)


State 96

   14 postfix_expression: postfix_expression DEC .

    $default  reduce using rule 14 (postfix_expression)


State 97

   11 postfix_expression: postfix_expression LB . RB
   12                   | postfix_expression LB . argument_expression_list RB

    ADD      shift, and go to state 31
    SUB      shift, and go to state 32
    MUL      shift, and go to state 33
    INC      shift, and go to state 34
    DEC      shift, and go to state 35
    LB       shift, and go to state 36
    RB       shift, and go to state 142
    I_CONST  shift, and go to state 37
    F_CONST  shift, and go to state 38
    S_CONST  shift, and go to state 39
    TR       shift, and go to state 40
    FA       shift, and go to state 41
    ID       shift, and go to state 42
    '&'      shift, and go to state 43
    '~'      shift, and go to state 44
    '!'      shift, and go to state 45
